hphp/hack/test/extended_reasons/refinement_equal.php.exp
error: Typing[4110] Invalid return type

Expected `~C` because the type of this return is implicitly a like-type

 6 | function inter_equal(?A $a, C $c): »C« {
 7 |   if($a == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 6, character 36 - line 6, character 36:

But got `?C`

 6 | function inter_equal(»?A« $a, C $c): C {
 7 |   if($a == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 6, character 22 - line 6, character 23:

Here's why: this hint

 6 | function inter_equal(»?A« $a, C $c): C {
 7 |   if($a == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 6, character 22 - line 6, character 23:

flows *into* this expression

 6 | function inter_equal(?A »$a«, C $c): C {
 7 |   if($a == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 6, character 25 - line 6, character 26:

which itself flows *into* this expression

 6 | function inter_equal(?A $a, C $c): C {
 7 |   if(»$a« == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 7, character 6 - line 7, character 7:

which itself flows *into* this expression

 11 |   }
 12 |   return »$z«;
 13 | }

File "refinement_equal.php", line 12, character 10 - line 12, character 11:

which itself flows *into* this expression

 11 |   }
 12 |   »return $z;«
 13 | }

File "refinement_equal.php", line 12, character 3 - line 12, character 12:

which itself flows *into* this thing (`Rpessimised_return`)

 6 | function inter_equal(?A $a, C $c): »C« {
 7 |   if($a == null) {
 8 |     $z = $a;
 9 |   } else {

File "refinement_equal.php", line 6, character 36 - line 6, character 36:

1 error found.
